// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContractABIModel - serializeJSON Multiple 1`] = `
Object {
  "events": Array [
    Object {
      "name": "event",
      "parameters": Array [
        Object {
          "name": "param",
          "type": "Hash160",
        },
        Object {
          "name": "param",
          "type": "Hash256",
        },
      ],
    },
  ],
  "hash": "0x0101010101010101010101010101010101010101",
  "methods": Array [
    Object {
      "name": "function",
      "offset": undefined,
      "parameters": Array [
        Object {
          "name": "param",
          "type": "Integer",
        },
        Object {
          "name": "param",
          "type": "Hash160",
        },
      ],
      "returnType": "Void",
    },
    Object {
      "name": "function",
      "offset": undefined,
      "parameters": Array [
        Object {
          "name": "param",
          "type": "String",
        },
      ],
      "returnType": "Integer",
    },
  ],
}
`;

exports[`ContractABIModel - serializeJSON Simple 1`] = `
Object {
  "events": Array [
    Object {
      "name": "event",
      "parameters": Array [
        Object {
          "name": "param",
          "type": "Boolean",
        },
      ],
    },
  ],
  "hash": "0x0101010101010101010101010101010101010101",
  "methods": Array [
    Object {
      "name": "function",
      "offset": undefined,
      "parameters": Array [
        Object {
          "name": "param",
          "type": "Boolean",
        },
      ],
      "returnType": "Void",
    },
  ],
}
`;
